2008-07-02  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 2006826:
    * source/org/jfree/chart/title/CompositeTitle.java
    (draw(Graphics2D, Rectangle2D)): Delegate to other draw method,
    (draw(Graphics2D, Rectangle2D, Parameters)): Modified implementation to 
    return result from BlockContainer.

2008-07-02  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/PiePlot.java
    (autoPopulateSectionPaint): New field,
    (autoPopulateSectionOutlinePaint): Likewise,
    (autoPopulateSectionOutlineStroke): Likewise,
    (PiePlot(PieDataset)): Initialise new fields,
    (lookupSectionPaint(Comparable)): Use autoPopulateSectionPaint field,
    (getAutoPopulateSectionPaint): New method,
    (setAutoPopulateSectionPaint): Likewise,
    (lookupSectionOutlinePaint(Comparable)): Use autoPopulateSectionOutlinePaint
    field,
    (getAutoPopulateSectionOutlinePaint): New method,
    (setAutoPopulateSectionOutlinePaint): Likewise,
    (lookupSectionOutlineStroke(Comparable)): 
    Use autoPopulateSectionOutlineStroke field,
    (getAutoPopulateSectionOutlineStroke): New method,
    (setAutoPopulateSectionOutlineStroke): Likewise,
    (drawItem): Updated lookup methods,
    (getLegendItems): Likewise,
    (equals): Updated for new fields,
    * source/org/jfree/chart/plot/PiePlot3D.java
    (draw): Updated lookup methods,
    * source/org/jfree/chart/plot/RingPlot.java
    (draw): Likewise.

2008-06-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/axis/CategoryAxis.java
    (getCategoryMiddle(Comparable, List, Rectangle2D, RectangleEdge)): 
    New method,
    * source/org/jfree/chart/plot/CategoryCrosshairState.java: New file,
    * source/org/jfree/chart/plot/CategoryPlot.java
    (crosshairDatasetIndex): New field,
    (domainCrosshairVisible): Likewise,
    (domainCrosshairRowKey): Likewise,
    (domainCrosshairColumnKey): Likewise,
    (domainCrosshairStroke): Likewise,