@@ -1,3 +1,15 @@
+2008-07-09  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/title/CompositeTitle.java
+    (backgroundPaint): New field,
+    (CompositeTitle): Initialise new field,
+    (getBackgroundPaint): New method,
+    (setBackgroundPaint): Likewise,
+    (draw): Fill background if necessary,
+    (equals): Check backgroundPaint,
+    (writeObject): Added serialization support for backgroundPaint,
+    (readObject): Likewise.
+
 2008-07-02  David Gilbert  <david.gilbert@object-refinery.com>
 
     Patch 2006826:
